appId: com.harenabs21.newappgenerated
---
- launchApp
- tapOn: 'Add one'
- tapOn:
    id: 'add_ten'
- assertVisible: 'Number of taps: 11'
- tapOn: 'Change me!'
- inputText: 'Hello, Maestro!'
- assertVisible: 'You typed: Hello, Maestro!'
